--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "EthereumClassicExplorer",
   "private": false,
   "version": "0.2.0",
-  "description": "A lightweight EtherZero block explorer",
+  "description": "A lightweight TaiChain block explorer",
   "repository": "https://github.com/ethereumproject/explorer",
   "license": "MIT",
   "scripts": {
